changed some context

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- Header with Navigation -->
   <header class="bg-blue-700 text-white fixed top-0 w-full shadow-md z-10">
     <div class="container mx-auto flex justify-between items-center p-4">
-      <h1 class="text-xl font-bold">Your Name</h1>
+      <h1 class="text-xl font-bold">Cheung Wai Shing</h1>
       <nav>
         <ul class="flex space-x-4">
           <li><a href="#home" class="hover:underline">Home</a></li>
@@ -45,11 +45,10 @@
     <section id="about" class="section py-12 bg-white rounded shadow">
       <h2 class="text-3xl font-semibold text-gray-800 text-center mb-6">About Me</h2>
       <div class="max-w-3xl mx-auto text-gray-700">
-        <p class="mb-4">I'm a student majoring in Information Engineering at The Chinese University of Hong Kong, with a strong interest in telecommunications, web development, and embedded systems. My skills include:</p>
+        <p class="mb-4">I'm a student majoring in Information Engineering at The Chinese University of Hong Kong, with a strong interest in Networking, Cloud Computing, Signal Processing & Machine Learning. My skills include:</p>
         <ul class="list-disc list-inside mb-4">
-          <li>Programming: C/C++, Python, JavaScript, HTML, CSS</li>
-          <li>Projects: Arduino-based weather station, socket programming, data analysis with SQL</li>
-          <li>Networking: Knowledge of telecom systems and protocols</li>
+          <li>Programming: C/C++, Python, JavaScript, HTML, CSS, SQL, Azure</li>
+          <li>Projects: Arduino-based weather station, socket programming, data analysis with SQL, Audio Processing, Telegram Bots</li>
         </ul>
         <p>I'm self-motivated, detail-oriented, and eager to contribute to innovative projects, as demonstrated by my recent internship at a leading local company.</p>
       </div>
@@ -75,7 +74,7 @@
       <h2 class="text-3xl font-semibold text-gray-800 text-center mb-6">Contact Me</h2>
       <div class="max-w-md mx-auto text-gray-700">
         <p class="mb-4">Interested in collaborating or learning more? Reach out to me!</p>
-        <p>Email: <a href="mailto:your.email@example.com" class="text-blue-500 hover:underline">your.email@example.com</a></p>
+        <p>Email: <a href="shitshitoy@gmail.com" class="text-blue-500 hover:underline">your.email@example.com</a></p>
         <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" class="text-blue-500 hover:underline">linkedin.com/in/yourprofile</a></p>
         <p class="mt-4">Fluent in English, Cantonese, and Putonghua.</p>
       </div>
