--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="home" class="section min-h-screen flex items-center justify-center bg-gradient-to-r from-blue-100 to-blue-200">
       <div class="text-center">
         <h2 class="text-4xl font-bold text-gray-800 mb-4">Hi, I'm CHEUNG Wai Shing</h2>
-        <p class="text-lg text-gray-600 mb-6">Information Engineering Student at CUHK | Passionate in Signal Processing, Machine Learning</p>
+        <p class="text-lg text-gray-600 mb-6">Information Engineering Student at CUHK | Passionate in Networking, Cloud Computing, Signal Processing, Machine Learning</p>
         <a href="#contact" class="bg-blue-500 text-white px-6 py-3 rounded-full hover:bg-blue-600">Get in Touch</a>
       </div>
     </section>
@@ -84,7 +84,7 @@
   <!-- Footer -->
   <footer class="bg-gray-800 text-white p-4">
     <div class="container mx-auto text-center">
-      <p>© 2025 Your Name. Built with passion and code.</p>
+      <p>© 2025 Cheung Wai Shing. Built with passion and code.</p>
     </div>
   </footer>
 
