--- a/index.html
+++ b/index.html
@@ -58,11 +58,28 @@
     <section id="projects" class="section py-12 bg-gray-50">
       <h2 class="text-3xl font-semibold text-gray-800 text-center mb-6">My Projects</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6 max-w-4xl mx-auto">
+        <!-- Project 1 -->
         <div class="bg-white p-6 rounded shadow">
           <h3 class="text-xl font-semibold text-gray-800">Arduino Weather Station</h3>
           <p class="text-gray-600">Built a weather monitoring system using Arduino to collect and display temperature and humidity data.</p>
         </div>
+        <!-- Project 2 -->
         <div class="bg-white p-6 rounded shadow">
+          <h3 class="text-xl font-semibold text-gray-800">Socket Programming Chat App</h3>
+          <p class="text-gray-600">Developed a real-time chat application using C/C++ with socket programming for client-server communication.</p>
+        </div>
+        <!-- Project 3 -->
+        <div class="bg-white p-6 rounded shadow">
+          <h3 class="text-xl font-semibold text-gray-800">Socket Programming Chat App</h3>
+          <p class="text-gray-600">Developed a real-time chat application using C/C++ with socket programming for client-server communication.</p>
+        </div>
+        <!-- Project 4 -->
+         <div class="bg-white p-6 rounded shadow">
+          <h3 class="text-xl font-semibold text-gray-800">Socket Programming Chat App</h3>
+          <p class="text-gray-600">Developed a real-time chat application using C/C++ with socket programming for client-server communication.</p>
+        </div>
+        <!-- Project 5 -->
+         <div class="bg-white p-6 rounded shadow">
           <h3 class="text-xl font-semibold text-gray-800">Socket Programming Chat App</h3>
           <p class="text-gray-600">Developed a real-time chat application using C/C++ with socket programming for client-server communication.</p>
         </div>
