changed proj section

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
         </div>
         <!-- Project 3 -->
         <div class="bg-white p-6 rounded shadow">
-          <h3 class="text-xl font-semibold text-gray-800">Socket Programming Chat App</h3>
-          <p class="text-gray-600">Developed a real-time chat application using C/C++ with socket programming for client-server communication.</p>
+          <h3 class="text-xl font-semibold text-gray-800">Audio Processing</h3>
+          <p class="text-gray-600">Extract Sound sample from dataset. Add low-pass & high-pass filters on the sound, and generating graph.</p>
         </div>
         <!-- Project 4 -->
          <div class="bg-white p-6 rounded shadow">
-          <h3 class="text-xl font-semibold text-gray-800">Socket Programming Chat App</h3>
-          <p class="text-gray-600">Developed a real-time chat application using C/C++ with socket programming for client-server communication.</p>
+          <h3 class="text-xl font-semibold text-gray-800">Deploy 24/7 web</h3>
+          <p class="text-gray-600">Use of azure student to deploy static web app</p>
         </div>
         <!-- Project 5 -->
          <div class="bg-white p-6 rounded shadow">
