--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
       <h2 class="text-3xl font-semibold text-gray-800 text-center mb-6">Contact Me</h2>
       <div class="max-w-md mx-auto text-gray-700">
         <p class="mb-4">Interested in collaborating or learning more? Reach out to me!</p>
-        <p>Email: <a href="shitshitoy@gmail.com" class="text-blue-500 hover:underline">your.email@example.com</a></p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" class="text-blue-500 hover:underline">linkedin.com/in/yourprofile</a></p>
+        <p>Email: <a href="shitshitoy@gmail.com" class="text-blue-500 hover:underline">shitshitoy@gmail.com</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/wai-shing-cheung-ba1742367/" class="text-blue-500 hover:underline">https://www.linkedin.com/in/wai-shing-cheung-ba1742367/</a></p>
         <p class="mt-4">Fluent in English, Cantonese, and Putonghua.</p>
       </div>
     </section>
